[package]
name = "listen-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bytes = "1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter","fmt", "time"] }
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }
regex = "1"
ahash = "0.8.12"
